--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>GIT desde cero</h1>
-  <p>EDteam_2</p>
+  <p>EDteam_2 desde Github</p>
+  <p>Editando desde github</p>
 </body>
 </html>
