Añadiendo estilo y enlazando el css con el index.html y el Readme , modificando tambien el html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practicando con Git</title>
+  <link rel="stylesheet" href="styles.css" type="text">
 </head>
 <body>
-  <h1>GIT desde cero</h1>
+  <h1>GIT desde cero desde el trabajo</h1>
   <p>EDteam_2 desde Github</p>
-  <p>Editando desde github</p>
+  <span> Esto es una a notacion</span>
+  <p>Añadiendo y avanzando todo para el proyecto desde el trabajo</p>
 </body>
 </html>
