cambio desde la rama test

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="styles.css" type="text">
 </head>
 <body>
-  <h1>GIT desde cero desde el trabajo</h1>
-  <p>EDteam_2 desde Github</p>
-  <span> Esto es una a notacion</span>
-  <p>Añadiendo y avanzando todo para el proyecto desde el trabajo</p>
+  <h1>GIT desde cero</h1>
+  <p>EDteam</p>
+  <section>
+    <p>Estoy en la rama TEST</p>
+  
+  </section>
 </body>
 </html>
