--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Practicando con Git</title>
   <link rel="stylesheet" href="styles.css" type="text">
 </head>
 <body>
-  <h1>GIT desde cero</h1>
+  <h1>GIT desde cero desde VScode</h1>
   <p>EDteam</p>
   <section>
     <p>Estoy en la rama TEST</p>
-  
   </section>
+  <div>
+    <p>
+      Practicando desde VS code
+    </p>
+  </div>
 </body>
 </html>
